src/tess/tl/test/fail/test_fail_f_string_nested.tl
#module main
#import <Print.tl>

main() {
    x := 42
    s := f"outer {f"inner {x}"}"
    0
}
